--- a/public/index.css
+++ b/public/index.css
@@ -13,7 +13,7 @@ p {
         }
         
         .bg-4 {
-            background-color: #2f2f2f;
+            background-color: #337ab7;
             /* Black Gray */
             color: #fff;
         }
